@@ -1,2 +1,2 @@
-java -jar supermarket.jar
+java --module-path lib --add-modules=ALL-MODULE-PATH -jar src/edu/csf/oop/java/supermarket/supermarket.jar
 pause >nul
